# TimberKat

./: LICENSE  README.md  pyproject.toml  setup.py
src/timberkat/: __init__.py  timberkat.py
tests/: test_catlifter.py
