[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "TimberKat"
description = "My TimberKat library"
readme = "README.md"
license = { text = "MIT" }
# version = "1.1.0"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
  {name = "Dick Tracy", email = "dick.tracy@gmail.com"}
]
keywords = ["cats", "purr", "packaging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "crcmod~=1.7",
]

[project.urls]
"Homepage" = "https://github.com/kenkehoe/TimberKat"

[tool.setuptools_scm]
version_file = "TimberKat/_version.py"

[tool.ruff]
ignore = ["E501"]
[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]
