[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]  # for the build process only
build-backend = "setuptools.build_meta"  # Defines how to build and with what tools.

[project]
name = "TimberKat"  # This is required and can not be dynamic
description = "My TimberKat library"
readme = "README.md"
license = { text = "MIT" }
# version = "1.1.0"
dynamic = [
    "version",  # This allows setting version with Git.
    "dependencies",  # This says the list of dependiences are read in.
    "optional-dependencies",  # This says the list of optional dependiences are read in.
]
requires-python = ">=3.10"
authors = [
  {name = "Dick Tracy", email = "dick.tracy@gmail.com"}
]
keywords = ["cats", "purr", "packaging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# This declaration allows the version to be pulled from Git using Git tags.
# Need to have "version" listed in dynamic above.
[tool.setuptools_scm]

# https://stackoverflow.com/questions/76722680/what-is-the-best-way-to-combine-conda-with-standard-python-packaging-tools-e-g
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[project.urls]
"Homepage" = "https://github.com/kenkehoe/TimberKat"
